kubernetes/k3s-01/workloads/hubble/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble.k3s-01.47fc5c.com`)
      kind: Rule
      services:
        - name: hubble-ui
          kind: Service
          port: 80
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: hubble-certificate
